[gd_scene load_steps=4 format=3 uid="uid://bbtb7mkc3panm"]

[ext_resource type="Theme" uid="uid://cxwyw4x8t5r2v" path="res://assets/themes/default_theme.tres" id="1_n3ry4"]
[ext_resource type="Script" path="res://scenes/core/game_over_menu.gd" id="2_ullbi"]

[sub_resource type="LabelSettings" id="LabelSettings_6o87w"]
font_color = Color(0.786067, 0, 0.0773542, 1)

[node name="GameOverMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_n3ry4")
script = ExtResource("2_ullbi")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1108.0
offset_bottom = 607.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1143.0
offset_bottom = 655.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "You died"
label_settings = SubResource("LabelSettings_6o87w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10

[node name="RetryButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../ExitButton")
focus_neighbor_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../ExitButton")
text = "Main Menu
"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../RetryButton")
focus_neighbor_bottom = NodePath("../RetryButton")
focus_next = NodePath("../RetryButton")
focus_previous = NodePath("../RetryButton")
text = "Exit
"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/ExitButton" to="." method="_on_exit_button_pressed"]
